# cppreference_extensions

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.txt
src/scope/: CMakeLists.txt  scope.h
src/scope/impl/: scope_impl.h  scope_impl_remake.h
tests/: CMakeLists.txt  test_scope_exit.cpp
